feat: реализация кэширования изменена на "ручную" с использованием RedisTemplate