@@ -5,16 +5,16 @@ import com.alkl1m.weatherapp.dto.WeatherDto;
 import com.alkl1m.weatherapp.dto.web.GeoResponse;
 import com.alkl1m.weatherapp.dto.web.WeatherResponse;
 import com.alkl1m.weatherapp.exception.GeoDataException;
+import com.alkl1m.weatherapp.service.CacheService;
 import com.alkl1m.weatherapp.service.GeoService;
 import com.alkl1m.weatherapp.service.WeatherService;
 
 import feign.FeignException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration;
 import java.util.List;
 
 /**
@@ -29,8 +29,10 @@ public class WeatherServiceImpl implements WeatherService {
     @Value("${api.openweathermap.key}")
     private String apikey;
 
-    private final WeatherClient weatherClient;
     private final GeoService geoService;
+    private final WeatherClient weatherClient;
+    private final CacheService cacheService;
+    private static final Duration CACHE_TTL = Duration.ofHours(1);
 
     /**
      * Получает погодные данные для указанного города.
@@ -44,18 +46,26 @@ public class WeatherServiceImpl implements WeatherService {
      * @return объект WeatherDto, содержащий информацию о погоде
      * @throws GeoDataException если возникает ошибка при получении данных о погоде
      */
-    @Override
-    @Cacheable(value = "weatherDataCache", key = "#cityName + '-' + #units + '-' + #lang")
     public WeatherDto getWeather(String cityName, String units, String lang) {
+        String cacheKey = cityName + "-" + units + "-" + lang;
+
+        WeatherDto cachedWeather = cacheService.getFromCache("weatherDataCache", cacheKey);
+        if (cachedWeather != null) {
+            return cachedWeather;
+        }
+
         try {
             List<GeoResponse> getGeoData = geoService.getGeoData(cityName, 1);
             WeatherResponse weatherData = weatherClient.getWeatherData(
-                    getGeoData.get(0).lat(),
-                    getGeoData.get(0).lon(),
+                    getGeoData.getFirst().lat(),
+                    getGeoData.getFirst().lon(),
                     units,
                     lang,
                     apikey);
-            return WeatherDto.fromWeatherResponse(cityName, weatherData);
+            WeatherDto weatherDto = WeatherDto.fromWeatherResponse(cityName, weatherData);
+
+            cacheService.putInCache("weatherDataCache", cacheKey, weatherDto, CACHE_TTL);
+            return weatherDto;
         } catch (FeignException e) {
             throw new GeoDataException("Error fetching weather data for city: " + cityName, e);
         }
@@ -66,9 +76,8 @@ public class WeatherServiceImpl implements WeatherService {
      * <p>
      * Этот метод удаляет все записи в кэше для weatherDataCache.
      */
-    @CacheEvict(value = "weatherDataCache", allEntries = true)
     public void cleanWeatherDataCache() {
-        // @CacheEvict будет очищать weatherDataCache
+        cacheService.evictCacheCategory("weatherDataCache");
     }
 
 }
